--- a/app/web/templates/chat.html
+++ b/app/web/templates/chat.html
@@ -131,12 +131,12 @@
             </button> -->
 
             <!-- Add configuration button -->
-            <!-- <button class="config-toggle" @click="toggleConfigPanel">
+            <button class="config-toggle" @click="toggleConfigPanel">
               <i class="fas fa-wrench"></i>
               <span class="sr-only" data-i18n="config_button"
                 >Configuration</span
               >
-            </button> -->
+            </button>
 
             <!-- <a
               href="https://github.com/mannaandpoem/OpenManus"
@@ -592,16 +592,27 @@
                 />
               </div>
               <div class="form-group">
+                <label for="llm-temperature">Top_p</label>
+                <input
+                  type="number"
+                  id="llm-top_p"
+                  v-model.number="config.llm.top_p"
+                  step="0.1"
+                  min="0"
+                  max="2"
+                />
+              </div>
+              <!--<div class="form-group">
                 <label for="llm-stream">Stream Response</label>
                 <input
                   type="checkbox"
                   id="llm-stream"
                   v-model="config.llm.stream"
                 />
-              </div>
+              </div>-->
 
               <!-- Vision model configuration -->
-              <h3>Vision Model Configuration</h3>
+             <!-- <h3>Vision Model Configuration</h3>
               <div class="form-group">
                 <label for="vision-model">Vision Model Name</label>
                 <input
@@ -644,11 +655,11 @@
                   min="0"
                   max="2"
                 />
-              </div>
+              </div>-->
             </div>
 
             <!-- Browser configuration -->
-            <div v-if="currentConfigTab === 'browser'" class="config-section">
+            <!--<div v-if="currentConfigTab === 'browser'" class="config-section">
               <h3>Browser Configuration</h3>
               <div class="form-group">
                 <label for="browser-headless">Headless Mode</label>
@@ -668,7 +679,7 @@
                   v-model="config.browser.disable_security"
                 />
               </div>
-              <!-- Proxy configuration -->
+              &lt;!&ndash; Proxy configuration &ndash;&gt;
               <h4>Proxy Configuration</h4>
               <div class="form-group">
                 <label for="proxy-server">Proxy Server</label>
@@ -694,10 +705,10 @@
                   v-model="proxyPasswordConfig"
                 />
               </div>
-            </div>
+            </div>-->
 
             <!-- Search configuration -->
-            <div v-if="currentConfigTab === 'search'" class="config-section">
+            <!--<div v-if="currentConfigTab === 'search'" class="config-section">
               <h3>Search Configuration</h3>
               <div class="form-group">
                 <label for="search-engine">Search Engine</label>
@@ -724,7 +735,7 @@
                   v-model.number="config.search.max_retries"
                 />
               </div>
-            </div>
+            </div>-->
 
             <!-- Sandbox configuration -->
             <div v-if="currentConfigTab === 'sandbox'" class="config-section">
